fixed index template to correctly display photo urls.

--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -2,7 +2,7 @@
 
 {% if photo_list %}
     {% for photo in photo_list %}
-        <li><i><b>Photo Url:</b></i>{{ photo_list.url }}<br>
+        <li><i><b>Photo Url:</b></i>{{ photo.url }}<br>
         </li>
     {% endfor %}
 {% else %}
