fixed index template to correctly display photo urls.

--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -2,7 +2,7 @@
 
 {% if photo_list %}
     {% for photo in photo_list %}
-        <li><a href="photo.url"><{{ photo.title_text }}</a><br>
+        <li><a href="{{ photo.url }}"><{{ photo.title_text }}</a><br>
         </li>
     {% endfor %}
 {% else %}
