Changed intitial marker on map

--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -24,6 +24,8 @@
     id: 'mspstead.pa7bn7bn',
     accessToken: 'pk.eyJ1IjoibXNwc3RlYWQiLCJhIjoiY2lsYjFsZHk1MDA0cHZ3bHpnNDJ3Njl1aCJ9.6fOLqnTPbgherhFtNpcIKA'
 }).addTo(map);
+  </script>
+  <script>
 marker = new L.marker(['53.79','-1.55']).addTo(map);
   </script>
 </body>
