Tried to add photo data to markers.

--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -25,8 +25,18 @@
     accessToken: 'pk.eyJ1IjoibXNwc3RlYWQiLCJhIjoiY2lsYjFsZHk1MDA0cHZ3bHpnNDJ3Njl1aCJ9.6fOLqnTPbgherhFtNpcIKA'
 }).addTo(map);
   </script>
-  <script>
-marker = new L.marker(['53.79','-1.55']).addTo(map);
-  </script>
+
+  {% if photo_list %}
+    {% for photo in photo_list %}
+        <script>
+        var latitude = {{ photo.lat }};
+        var longitude = {{ photo.lng }};
+        var url1 = {{ photo.url }};
+        marker = new L.marker([latitude,longitude]).addTo(map);
+        </script>
+    {% endfor %}
+{% else %}
+    <p>No photos available</p>
+{% endif %}
 </body>
 </html>
