--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -32,7 +32,8 @@
         var latitude = "{{ photo.lat }}";
         var longitude = "{{ photo.lng }}";
         var url1 = "{{ photo.url }}";
-        marker = new L.marker([latitude,longitude]).addTo(map).bindPopup("<img src="+ url1 +"/>");
+        var date = "{{ photo.date_taken }}"
+        marker = new L.marker([latitude,longitude]).addTo(map).bindPopup("<img src="+ url1 +"/><h2>"+ date +"</h2>");
         </script>
     {% endfor %}
 {% else %}
