--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="{{ STATIC_URL }}timeline.css" />
 <div class="container">
     <div class="page-header">
         <h1 id="timeline">Timeline</h1>
