--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="{{ STATIC_URL }}timeline.css" />
+{% load staticfiles %}
+<link rel="stylesheet" type="text/css" href="{% static 'flood/timeline.css' %}" />
 <div class="container">
     <div class="page-header">
         <h1 id="timeline">Timeline</h1>
