--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -1,9 +1,9 @@
 {% load staticfiles %}
 <head>
-    <link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/bootstrap-glyphicons.css' %}">
-    <link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/timeline.css' %}">
-    <script type="text/javascript" src="{% static 'flood/js/jquery-1.11.0.min.js' %}"></script>
+    <link rel="stylesheet" type="text/css" media="all" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" media="all" href="{% static 'css/bootstrap-glyphicons.css' %}">
+    <link rel="stylesheet" type="text/css" media="all" href="{% static 'css/timeline.css' %}">
+    <script type="text/javascript" src="{% static 'js/jquery-1.11.0.min.js' %}"></script>
 </head>
 <div class="container">
     <div class="page-header">
