--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -1,5 +1,15 @@
-<br>Hello Michael <br/> <a href='map'>Map</a>
-
+{% load staticfiles %}
+<link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/bootstrap.min.css' %}">
+<link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/bootstrap-glyphicons.css' %}">
+<script src="{% static 'flood/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<div class="container">
+  <div class="jumbotron">
+    <h1>My First Bootstrap Page</h1>
+    <p>Resize this responsive page to see the effect!</p>
+  </div>
+</div>
+<!--<br>Hello Michael <br/> <a href='map'>Map</a>
 {% if photo_list %}
     {% for photo in photo_list %}
         <li><a href="{{ photo.url }}">{{ photo.title_text }}</a></li>
@@ -7,3 +17,4 @@
 {% else %}
     <p>No photos available</p>
 {% endif %}
+-->
