Testing bootstrap implementation on index page.

--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -1,22 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-</head>
-<body>
-
+{% load staticfiles %}
+<link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/bootstrap.min.css' %}">
+<link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/bootstrap-glyphicons.css' %}">
+<script src="{% static 'flood/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <div class="container">
-  <h1>My First Bootstrap Page</h1>
-  <p>This is some text.</p>
+  <div class="jumbotron">
+    <h1>My First Bootstrap Page</h1>
+    <p>Resize this responsive page to see the effect!</p>
+  </div>
 </div>
-
-</body>
-</html>
 <!--<br>Hello Michael <br/> <a href='map'>Map</a>
 {% if photo_list %}
     {% for photo in photo_list %}
