edited timeline to show photo's.

--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -12,7 +12,25 @@
         <h1 id="timeline">Timeline</h1>
     </div>
     <ul class="timeline">
-        <li>
+        {% if photo_list %}
+            {% for photo in photo_list %}
+                <li>
+                    <a href="{{ photo.url }}">{{ photo.title_text }}</a>
+                    <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4 class="timeline-title">{{ photo.title.text }}</h4>
+                        </div>
+                        <div class="timeline-body">
+                            <img src="{{ photo.url }}"/>
+                        </div>
+                    </div>
+                </li>
+            {% endfor %}
+        {% else %}
+            <p>No photos available</p>
+        {% endif %}
+        <!--<li>
           <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
@@ -101,7 +119,7 @@
               <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
             </div>
           </div>
-        </li>
+        </li>-->
     </ul>
 </div>
 </html>
