--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -10,31 +10,19 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 <body>
-
-<div class="container">
-  <h1>My First Bootstrap Page</h1>
-  <p>This is some text.</p>
-</div>
-
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Bootstrap Test</h1>
+      <a href='map'>Map</a>
+      {% if photo_list %}
+        {% for photo in photo_list %}
+          <li><a href="{{ photo.url }}">{{ photo.title_text }}</a></li>
+        {% endfor %}
+      {% else %}
+        <p>No photos available</p>
+      {% endif %}
+    </div>
+  </div>
 </body>
 </html>
-<!--{% load staticfiles %}
-<link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/bootstrap.min.css' %}">
-<link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/bootstrap-glyphicons.css' %}">
-<script src="{% static 'flood/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<div class="container">
-  <div class="jumbotron">
-    <h1>My First Bootstrap Page</h1>
-    <p>Resize this responsive page to see the effect!</p>
-  </div>
-</div>-->
-<!--<br>Hello Michael <br/> <a href='map'>Map</a>
-{% if photo_list %}
-    {% for photo in photo_list %}
-        <li><a href="{{ photo.url }}">{{ photo.title_text }}</a></li>
-    {% endfor %}
-{% else %}
-    <p>No photos available</p>
-{% endif %}
--->
+
