Added date to timeline.

--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -19,7 +19,7 @@
                     <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h4 class="timeline-title">{{ photo.title.text }}</h4>
+                            <h4 class="timeline-title">{{ photo.date_taken.text }}</h4>
                         </div>
                         <div class="timeline-body">
                             <img src="{{ photo.url }}"/>
