Added initial scheduler to FloodAreas Added initial dropdown box to timeline.

--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -10,6 +10,15 @@
 <div class="container">
     <div class="page-header">
         <h1 id="timeline">Timeline</h1>
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+            <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JavaScript</a></li>
+              </ul>
+        </div>
     </div>
     <ul class="timeline">
         {% if photo_list %}
