--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/bootstrap-glyphicons.css' %}">
     <link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/timeline.css' %}">
+    <script type="text/javascript" src="{% static 'flood/js/bootstrap.min.js' %}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 <div class="container">
