Switched order of js references, changed dropdown menu display items.

--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/bootstrap-glyphicons.css' %}">
     <link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/timeline.css' %}">
-    <script type="text/javascript" src="{% static 'flood/js/bootstrap.min.js' %}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script type="text/javascript" src="{% static 'flood/js/bootstrap.min.js' %}"></script>
 </head>
 <div class="container">
     <div class="page-header">
@@ -15,9 +15,9 @@
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
             <span class="caret"></span></button>
             <ul class="dropdown-menu">
-                <li><a href="#">HTML</a></li>
-                <li><a href="#">CSS</a></li>
-                <li><a href="#">JavaScript</a></li>
+                <li>Leeds</li>
+                <li>Otley</li>
+                <li>Bradford</li>
               </ul>
         </div>
     </div>
