--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -10,6 +10,11 @@
 </head>
 <div class="container">
     <div class="page-header">
+        {% if locality_list %}
+            {% for locality in locality_list %}
+                <li>{{ locality }}</li>
+            {% endfor %}
+        {% endif %}
         <h1 id="timeline">Timeline</h1>
         <div class="dropdown">
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
