--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -8,6 +8,11 @@
   </style>
 </head>
 <body>
+     <ul class="nav nav-pills">
+        <li role="presentation"><a href="#">Home</a></li>
+        <li role="presentation" class="active"><a href="map">Map</a></li>
+        <li role="presentation"><a href="timeline">Timeline</a></li>
+     </ul>
 
   <div id="map"></div>
 
