--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -10,7 +10,7 @@
 </head>
 <div class="container">
     <ul class="nav nav-pills">
-        <li role="presentation"><a href="#">Home</a></li>
+        <li role="presentation"><a href="{% url index %}">Home</a></li>
         <li role="presentation"><a href="map">Map</a></li>
         <li role="presentation" class="active"><a href="timeline">Timeline</a></li>
     </ul>
