--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <ul class="nav nav-pills">
-            <li role="presentation"><a href="{% url index %}">Home</a></li>
+            <li role="presentation"><a href="/flood/">Home</a></li>
             <li role="presentation" class="active"><a href="map">Map</a></li>
             <li role="presentation"><a href="timeline">Timeline</a></li>
         </ul>
