--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -26,7 +26,7 @@
 
         // initialize the map
         var map = L.map('map').setView([53.79, -1.55], 10);
-
+        map.invalidateSize();
 
         // load a tile layer
         L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
