Fix map to display in bootstrap.

--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -4,8 +4,8 @@
 <head>
   <title>A Leaflet map!</title>
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
-  <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
   <link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/bootstrap.min.css' %}">
+  <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <style>
@@ -14,11 +14,11 @@
 </head>
 <body>
     <div class="container">
-        <ul class="nav nav-pills">
+        <!--<ul class="nav nav-pills">
             <li role="presentation"><a href="/flood/">Home</a></li>
             <li role="presentation" class="active"><a href="map">Map</a></li>
             <li role="presentation"><a href="timeline">Timeline</a></li>
-        </ul>
+        </ul>-->
 
         <div id="map"></div>
 
