--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>Single marker</title>
+<title>A simple map</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>
 <link href='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.css' rel='stylesheet' />
@@ -12,44 +12,11 @@
 </style>
 </head>
 <body>
-
-
 <div id='map'></div>
-
 <script>
 L.mapbox.accessToken = 'pk.eyJ1IjoibXNwc3RlYWQiLCJhIjoiY2lsYjFsZHk1MDA0cHZ3bHpnNDJ3Njl1aCJ9.6fOLqnTPbgherhFtNpcIKA';
 var map = L.mapbox.map('map', 'mapbox.streets')
     .setView([53.79, -1.55], 10);
-{% if photo_list %}
-  {% for photo in photo_list %}
-    L.mapbox.featureLayer({
-      // this feature is in the GeoJSON format: see geojson.org
-      // for the full specification
-      type: 'Feature',
-      geometry: {
-          type: 'Point',
-          // coordinates here are in longitude, latitude order because
-          // x, y is the standard for GeoJSON and many formats
-          coordinates: [
-            {{ photo.lng }},
-            {{ photo.lat }}
-            ]
-            },
-      properties: {
-          title: {{ photo.date_taken }},
-          description: '<img src="{{ photo.url }}"/>',
-          // one can customize markers by adding simplestyle properties
-          // https://www.mapbox.com/guides/an-open-platform/#simplestyle
-          'marker-size': 'large',
-          'marker-color': '#BE9A6B',
-          'marker-symbol': 'cafe'
-      }
-      }).addTo(map);
-    {% endfor %}
-  {% endif %}
-
 </script>
-
-
 </body>
 </html>
