First attempt at map clustering.

--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -25,11 +25,12 @@
 L.mapbox.accessToken = 'pk.eyJ1IjoibXNwc3RlYWQiLCJhIjoiY2lsYjFsZHk1MDA0cHZ3bHpnNDJ3Njl1aCJ9.6fOLqnTPbgherhFtNpcIKA';
     var map = L.mapbox.map('map', 'mapbox.streets')
         .setView([53.79, -1.55], 10);
+    var markers = new L.MarkerClusterGroup();
 </script>
-   <!-- var markers = new L.MarkerClusterGroup();
 
     {% if photo_list %}
       {% for photo in photo_list %}
+        <script>
         var url = "{{ photo.url }}";
         var lat = "{{ photo.lat }}";
         var lng = "{{ photo.lng }}";
@@ -39,10 +40,11 @@ L.mapbox.accessToken = 'pk.eyJ1IjoibXNwc3RlYWQiLCJhIjoiY2lsYjFsZHk1MDA0cHZ3bHpnN
         });
         marker.bindPopup(title);
         markers.addLayer(marker);
+        </script>
       {% endfor %}
     {% endif %}
-
+<script>
     map.addLayer(markers);
-</script>-->
+</script>
 </body>
 </html>
