attempt a different form of clustering.

--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -13,22 +13,26 @@
             <li role="presentation"><a href="timeline">Timeline</a></li>
         </ul>-->
 
-        <div id="map"></div>
+ <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
+ <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
+ <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
 
-        <script>
+ <div id="map"></div>
 
-        // initialize the map
-        var map = L.map('map').setView([53.79, -1.55], 10);
-        map.invalidateSize();
+ <script>
 
-        // load a tile layer
-        L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
-            attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-        maxZoom: 18,
-        id: 'mspstead.pa7bn7bn',
-        accessToken: 'pk.eyJ1IjoibXNwc3RlYWQiLCJhIjoiY2lsYjFsZHk1MDA0cHZ3bHpnNDJ3Njl1aCJ9.6fOLqnTPbgherhFtNpcIKA'
-        }).addTo(map);
-        </script>
+   // initialize the map
+   var map = L.map('map').setView([53.79, -1.55], 10);
+
+   // load a tile layer
+   L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
+      attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+      maxZoom: 18,
+      id: 'mspstead.pa7bn7bn',
+      accessToken: 'pk.eyJ1IjoibXNwc3RlYWQiLCJhIjoiY2lsYjFsZHk1MDA0cHZ3bHpnNDJ3Njl1aCJ9.6fOLqnTPbgherhFtNpcIKA'
+      }).addTo(map);
+   var markers = new L.MarkerClusterGroup();
+</script>
 
         {% if photo_list %}
             {% for photo in photo_list %}
@@ -37,11 +41,15 @@
                 var longitude = "{{ photo.lng }}";
                 var url1 = "{{ photo.url }}";
                 var date = "{{ photo.date_taken }}"
-                marker = new L.marker([latitude,longitude]).addTo(map).bindPopup("<img src="+ url1 +"/><h2>"+ date +"</h2>");
+                marker = new L.marker([latitude,longitude]).bindPopup("<img src="+ url1 +"/><h2>"+ date +"</h2>");
+                marker.addTo(markers)
                 </script>
             {% endfor %}
         {% else %}
             <p>No photos available</p>
         {% endif %}
+<script>
+    markers.addTo(map)
+</script>
 </body>
 </html>
