--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -1,17 +1,21 @@
+{% load staticfiles %}
 <html>
   <title>A Leaflet map!</title>
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
   <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+  <link rel="stylesheet" type="text/css" media="all" href="{% static 'flood/css/bootstrap.min.css' %}">
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <style>
     #map{ height: 100% }
   </style>
 </head>
 <body>
-        <!--<ul class="nav nav-pills">
-            <li role="presentation"><a href="/flood/">Home</a></li>
-            <li role="presentation" class="active"><a href="map">Map</a></li>
-            <li role="presentation"><a href="timeline">Timeline</a></li>
-        </ul>-->
+ <ul class="nav nav-pills">
+   <li role="presentation"><a href="/flood/">Home</a></li>
+   <li role="presentation" class="active"><a href="map">Map</a></li>
+   <li role="presentation"><a href="timeline">Timeline</a></li>
+ </ul>
 
  <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
