--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -22,7 +22,7 @@
             <ul class="dropdown-menu">
                 {% if locality_list %}
                     {% for locality in locality_list %}
-                        <li><a href="#">{{ locality.locality }}</a></li>
+                        <li><a href="map">{{ locality.locality }}</a></li>
                     {% endfor %}
                 {% endif %}
               </ul>
