First attempt at dropdown select creating timeline for specific locality, based on url parameters.

--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -29,25 +29,15 @@
         </div>
     </div>
     <h2></h2>
-    <script>
-        var local = location.search.substr(1);
-        document.write("<h1>"+local+"</h1>")
-    </script>
     <ul class="timeline">
         {% if photo_list %}
             {% for photo in photo_list %}
-                <li>
-                    <a href="{{ photo.url }}">{{ photo.date_taken }}</a>
-                    <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
-                    <div class="timeline-panel">
-                        <div class="timeline-heading">
-                            <h4 class="timeline-title">{{ photo.date_taken.text }}</h4>
-                        </div>
-                        <div class="timeline-body">
-                            <img src="{{ photo.url }}"/>
-                        </div>
-                    </div>
-                </li>
+                <script>
+                    var local = location.search.substr(1);
+                    if ("{{photo.locality}}" == local) {
+                        document.write('<li><a href="{{ photo.url }}">{{ photo.date_taken }}</a><div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div><div class="timeline-panel"><div class="timeline-heading"><h4 class="timeline-title">{{ photo.date_taken.text }}</h4></div><div class="timeline-body"><img src="{{ photo.url }}"/></div></div></li>')
+                    }
+                </script>
             {% endfor %}
         {% else %}
             <p>No photos available</p>
