--- a/django_project/flood/templates/flood/graph.html
+++ b/django_project/flood/templates/flood/graph.html
@@ -12,23 +12,11 @@
 <body>
   <div class="container">
     <ul class="nav nav-pills">
-      <li role="presentation" class="active"><a href="#">Home</a></li>
+      <li role="presentation"><a href="#">Home</a></li>
       <li role="presentation"><a href="map">Map</a></li>
       <li role="presentation"><a href="timeline">Timeline</a></li>
-      <li role="presentation>"><a href="graph">Graph</a> </li>
-
+      <li role="presentation>" class="active"><a href="graph">Graph</a> </li>
     </ul>
-    <div class="jumbotron">
-      <h1>Bootstrap Test</h1>
-      {% if photo_list %}
-        {% for photo in photo_list %}
-          <li><a href="{{ photo.url }}">{{ photo.title_text }}</a></li>
-        {% endfor %}
-      {% else %}
-        <p>No photos available</p>
-      {% endif %}
-    </div>
   </div>
 </body>
 </html>
-
