--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -15,6 +15,7 @@
    <li role="presentation"><a href="/flood/">Home</a></li>
    <li role="presentation" class="active"><a href="map">Map</a></li>
    <li role="presentation"><a href="timeline">Timeline</a></li>
+   <li role="presentation>"><a href="graph">Graph</a> </li>
  </ul>
 
  <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
