--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -13,6 +13,8 @@
         <li role="presentation"><a href="/flood/">Home</a></li>
         <li role="presentation"><a href="map">Map</a></li>
         <li role="presentation" class="active"><a href="timeline">Timeline</a></li>
+        <li role="presentation>"><a href="graph">Graph</a> </li>
+
     </ul>
     <div class="page-header">
         <h1 id="timeline">Timeline</h1>
@@ -30,7 +32,7 @@
     </div>
     <h2></h2>
     <ul class="timeline">
-        {% if photo_list %}
+        {% if photo_list => 1 %}
             {% for photo in photo_list reversed %}
                 <script>
                     var local = location.search.substr(1);
