--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -19,7 +19,7 @@
     <div class="page-header">
         <h1 id="timeline">Timeline</h1>
         <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Locality
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Flood Event
             <span class="caret"></span></button>
             <ul class="dropdown-menu">
                 {% if locality_list %}
